Fixed route number overflow clipping and bike station aligning in the nearby table

--- a/app/component/departures-table.scss
+++ b/app/component/departures-table.scss
@@ -61,6 +61,7 @@ table.nearby-departures-table {
                 &.td-available-bikes {
                     font-size: $font-size-small;
                     text-align: center;
+                    flex: 0 0 8em;
                     .city-bike-station-availability {
                         padding-right: 0.3em;
                     }
